--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7445358721653799"
+     crossorigin="anonymous"></script>
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
@@ -263,7 +264,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-emoji-smile"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="3890" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3899" data-purecounter-duration="1" class="purecounter"></span>
               <p>Aktif user</p>
             </div>
           </div><!-- End Stats Item -->
@@ -271,7 +272,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-journal-richtext"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="3001" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3075" data-purecounter-duration="1" class="purecounter"></span>
               <p>Aktif config</p>
             </div>
           </div><!-- End Stats Item -->
@@ -279,7 +280,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-headset"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="46" data-purecounter-duration="1" class="purecounter"></span>
               <p>Pelayanan keluhan harian</p>
             </div>
           </div><!-- End Stats Item -->
