--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <div class="col-lg-6  d-flex flex-column justify-content-center" data-aos="fade-in">
             <h1>Selamat datang di  <span>Web sanggar</span></h1>
-            <p>Terima lasih telah mengunjungi website kami kang !</p>
+            <p>Terima kasih telah mengunjungi website kami kang !</p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Saluran wa</a>
             </div>
