--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h1>Selamat datang di  <span>Web sanggar</span></h1>
             <p>Terima kasih telah mengunjungi website kami kang !</p>
             <div class="d-flex">
-              <a href="#about" class="btn-get-started">Saluran wa</a>
+              <a href="https://whatsapp.com/channel/0029VaiVRii2v1IkbzKh9r0Z" class="btn-get-started">Saluran wa</a>
             </div>
           </div>
 
