--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+⁹<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -264,7 +264,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-emoji-smile"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="3899" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="4000" data-purecounter-duration="1" class="purecounter"></span>
               <p>Aktif user</p>
             </div>
           </div><!-- End Stats Item -->
@@ -272,7 +272,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-journal-richtext"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="3075" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3079" data-purecounter-duration="1" class="purecounter"></span>
               <p>Aktif config</p>
             </div>
           </div><!-- End Stats Item -->
@@ -280,7 +280,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-headset"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="46" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="45" data-purecounter-duration="1" class="purecounter"></span>
               <p>Pelayanan keluhan harian</p>
             </div>
           </div><!-- End Stats Item -->
@@ -288,7 +288,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-people"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="9708" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="10007" data-purecounter-duration="1" class="purecounter"></span>
               <p>Member bergabung group</p>
             </div>
           </div><!-- End Stats Item -->
@@ -319,7 +319,7 @@
             <p class="fst-italic">
             </p>
             <ul>
-              <li><i class="bi bi-check"></i><span> Server 24 jak aman berjalan lancar.</span></li>
+              <li><i class="bi bi-check"></i><span> Server 24 jam aman berjalan lancar.</span></li>
               <li><i class="bi bi-check"></i> <span>Tidak gangguan sa'at digunakan main game dan livestreaming</span></li>
               <li><i class="bi bi-check"></i> <span>Full garansi sesuai pembelian config</span></li>
             </ul>
@@ -333,7 +333,7 @@
           <div class="col-md-7 order-2 order-md-1" data-aos="fade-up" data-aos-delay="200">
             <h3>Kami update setiap hari di sosial media</h3>
             <p class="fst-italic">
-              Update config free di jam2 tertentu kami update seperti di : website telegram,fb & youtube !
+              Update config free di jam² tertentu kami update seperti di : website telegram,fb & youtube !
             </p>
             <p>
               Jangan lewatkan update ny & ikuti chanel2 yg telah kami sediakan di sosial media kami !
@@ -351,7 +351,7 @@
             <ul>
               <li><i class="bi bi-check"></i> <span>Config berjalan seperti layaknya kuota utama</span></li>
               <li><i class="bi bi-check"></i><span> Config bisa memuat data internet yg besar.</span></li>
-              <li><i class="bi bi-check"></i> <span>Config premium bisa kengakat ukuran file besar dan ukuran vidio high</span>.</li>
+              <li><i class="bi bi-check"></i> <span>Config premium bisa kengakat ukuran file besar dan ukuran vidio besar</span>.</li>
             </ul>
           </div>
         </div><!-- Features Item -->
