--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-people"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="1200" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="12600" data-purecounter-duration="1" class="purecounter"></span>
               <p>Member bergabung group</p>
             </div>
           </div><!-- End Stats Item -->
@@ -874,7 +874,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        web2 <a href="https://www.sanggar-tunnel.my.id/">Sangar website</a> Update <a href="https://sfile.mobi/user.php?files&user=577062">Sfile</a>
+        web2 <a href="https://www.sanggar-tunnel.my.id/">Sangar website</a> Update <a href="https://sfile.mobi/user.php?files&user=577062">Sfile mobi</a>
       </div>
     </div>
 
