--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>🇮🇩 Config Sanggar </title>
-  <meta name="description" content="">
+  <meta name="description" content="Config sanggar, config http custom ,config http injector">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
@@ -590,7 +590,7 @@
               <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Top seller teratas</h4>
-                <span>member aktif 405 ip</span>
+                <span>member aktif 425 ip</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -606,7 +606,7 @@
               <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Top seller teratas </h4>
-                <span>member aktif 310 ip</span>
+                <span>member aktif 320 ip</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -622,7 +622,7 @@
               <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Top seller teratas</h4>
-                <span>member aktif 170 ip</span>
+                <span>member aktif 180 ip</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
