--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>🇮🇩 Config Sanggar </title>
   <meta name="description" content="Config sanggar, config http custom ,config http injector">
-  <meta name="keywords" content="">
+  <meta name="keywords" content="<meta name="google-adsense-account" content="ca-pub-7445358721653799">">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
